RESOLVED FIXED22752
Clear SymbolTable after codegen for Function codeblocks that don't require an activation
https://bugs.webkit.org/show_bug.cgi?id=22752
Summary Clear SymbolTable after codegen for Function codeblocks that don't require an...
Sam Weinig
Reported 2008-12-08 22:00:23 PST
Only codeblocks for functions that need an activation, which we can determine statically, need to keep their SymbolTable around after codegen.
Attachments
patch (3.04 KB, patch)
2008-12-08 22:03 PST, Sam Weinig
no flags
updated patch (3.11 KB, patch)
2008-12-09 16:39 PST, Sam Weinig
no flags
Sam Weinig
Comment 1 2008-12-08 22:03:59 PST
Cameron Zwarich (cpst)
Comment 2 2008-12-08 22:05:51 PST
Comment on attachment 25873 [details] patch r=me
Cameron Zwarich (cpst)
Comment 3 2008-12-08 22:19:37 PST
Oliver just pointed out that this will cause problems for the debugger -- you should check needsFullScopeChain on the CodeBlock instead, since that also includes the case of debugging.
Oliver Hunt
Comment 4 2008-12-08 23:25:30 PST
Comment on attachment 25873 [details] patch removing r+ flag due to regression Sam found -- f.arguments.argumentName fails :-(
Sam Weinig
Comment 5 2008-12-09 16:39:22 PST
Created attachment 25903 [details] updated patch
Sam Weinig
Comment 6 2008-12-09 16:42:08 PST
Fixed in r39157.
Note You need to log in before you can comment on or make changes to this bug.