JavaScriptCore/bytecode/CodeBlock.cpp
@@ -993,8 +993,11 @@ void CodeBlock::dumpStatistics()
     // Non-vector data members
     size_t jitReturnAddressVPCMapIsNotEmpty = 0;
     size_t evalCodeCacheIsNotEmpty = 0;
+    size_t symbolTableIsNotEmpty = 0;
 
     size_t hasRareData = 0;
+
+    size_t symbolTableTotalSize = 0;
 
     HashSet<CodeBlock*>::const_iterator end = liveCodeBlockSet.end();
     for (HashSet<CodeBlock*>::const_iterator it = liveCodeBlockSet.begin(); it != end; ++it) {
@@ -1006,6 +1009,11 @@ void CodeBlock::dumpStatistics()
 
         if (!codeBlock->m_jitReturnAddressVPCMap.isEmpty())
             jitReturnAddressVPCMapIsNotEmpty++;
+
+        if (!codeBlock->m_symbolTable.isEmpty()) {
+            symbolTableIsNotEmpty++;
+            symbolTableTotalSize += (codeBlock->m_symbolTable.capacity() * (sizeof(SymbolTable::KeyType) + sizeof(SymbolTable::MappedType)));
+        }
 
         if (codeBlock->m_rareData) {
             hasRareData++;
@@ -1030,6 +1038,10 @@ void CodeBlock::dumpStatistics()
 
     printf("Number of CodeBlocks with jitReturnAddressVPCMap: %zu\n", jitReturnAddressVPCMapIsNotEmpty);
     printf("Number of CodeBlocks with evalCodeCache: %zu\n", evalCodeCacheIsNotEmpty);
+    printf("Number of CodeBlocks with symbolTable: %zu\n", symbolTableIsNotEmpty);
+
+    printf("Size of all symbolTables: %zu\n", symbolTableTotalSize);
+
 #else
     printf("Dumping CodeBlock statistics is not enabled.\n");
 #endif
